--- a/index.html
+++ b/index.html
@@ -13,40 +13,38 @@
 	<body>
 					
 			<div class="container">
-				<h1>Hola Mundo</h1>	
-
-				<h3>{{"Hola mundo desde AngularJS"}}</h3>	
-
-
-					<!-- Filtros en angular -->
-				<p>
-					Filtro de texto: {{"FerNandO"}}
-					<br/>
-					Filtro de texto: {{"FerNandO" | uppercase }}
-					<br/>
-					Filtro de texto: {{"FerNandO" | lowercase }}
-					<br/>
-					<br/>
-					Filtro de Moneda: {{  1350  }}
-					<br/>
-					Filtro de Moneda: {{  1350 | currency }}
-					<br/>
-					Filtro de Moneda: {{  1350 | currency:'Col. ' }}	
-					<br/>	
-					Filtro de Moneda: {{  1350 | currency:'' }}	
-
-
-				</p>
-
+				<h1>ng-model</h1>	
+				<h4>en angularJS</h4>	
 
 				<p>
-					<br/>	
-					Filtro de Número: {{  1350000 }}				
-					<br/>	
-					Filtro de Número: {{  1350000 | number }}				
-
-
+					Su nombre: {{ nombre | uppercase }}
+					<br/>
+					<input class="form-control" type="text" ng-model="nombre" name="form-control" placeholder="Ingrese su nombre ">	
+				</p>							
+				<p>
+					Seleccione el País: {{ pais }}
+					<select class="form-control" ng-model="pais">
+						<option value="1">Costa Rica</option>
+						<option value="2">México</option>
+						<option value="3">Colombia</option>					
+					</select>				
 				</p>
+				<p>
+					Seleccione las opciones que desea: {{ opt1 }}  {{ opt2 }}
+					<br/>
+					<input  type="checkbox" ng-model="opt1">Opción 1
+					<br/>
+					<input  type="checkbox" ng-model="opt2">Opción 2
+				</p>
+
+				<p>
+					Seleccione las opciones que desea: {{ genero }}  
+					<br/>
+					<input  type="radio" value="M" ng-model="genero">Opción 1
+					<br/>
+					<input  type="radio" value="F" ng-model="genero">Opción 2
+				</p>
+
 			</div>
 
 	</body>
