mejora se coloco el autofocus

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 				<p>
 					Nombre completo:
 					<br/>
-					<input class="form-control" type="text" ng-model="nombre" name="form-control" placeholder="Ingrese su nombre ">	
+					<input class="form-control" type="text" ng-model="nombre" name="form-control" placeholder="Ingrese su nombre " autofocus>	
 				</p>
 				<p>
 					Lugar de trabajo:
 					<br/>
-					<input class="form-control" type="text" ng-model="trabajo" name="form-control" placeholder="Ingrese su nombre ">
+					<input class="form-control" type="text" ng-model="trabajo" name="form-control" placeholder="Ingrese lugar de trabajo ">
 				</p>
 				<p>
 					Salario en Dólares:
 					<br/>
-					<input class="form-control" type="text" ng-model="salario" name="form-control" placeholder="Ingrese su nombre ">
+					<input class="form-control" type="text" ng-model="salario" name="form-control" placeholder="Ingrese su salario en Dólares ">
 				</p>
 
 				<p>
