--- a/index.html
+++ b/index.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
-<html ng-app>
-	<head>
-			
-			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-			
-			<!-- incluir Bootstrap  -->
-			<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<html ng-app="universidadAPP">
 
-			<!-- incluir angularJS -->
-			<script src="js/lib/angular.min.js"></script>
-	</head>
-	<body>
-					
-			<div class="container">
-				<h1>ng-model</h1>	
-				<h4>en angularJS</h4>	
+<head>
 
-				<p>
-					Nombre completo:
-					<br/>
-					<input class="form-control" type="text" ng-model="nombre" name="form-control" placeholder="Ingrese su nombre " autofocus>	
-				</p>
-				<p>
-					Lugar de trabajo:
-					<br/>
-					<input class="form-control" type="text" ng-model="trabajo" name="form-control" placeholder="Ingrese lugar de trabajo ">
-				</p>
-				<p>
-					Salario en Dólares:
-					<br/>
-					<input class="form-control" type="text" ng-model="salario" name="form-control" placeholder="Ingrese su salario en Dólares ">
-				</p>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Ejercicio 2</title>
+    <!-- incluir Bootstrap  -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-				<p>
-					Nombre: {{ nombre }}
-					<br/>
-					Lugar de Trabajo: {{ trabajo }}
-					<br/>
-					Con un salario de: {{ salario | currency }}
-				</p>				
-			</div>
+    <!-- incluir angularJS -->
+    <script src="js/lib/angular.min.js"></script>
 
-	</body>
+    <!-- incluir controlador solo debe haber 1 por cada pagina html -->
+    <script src="js/app.js"></script>
+
+</head>
+
+<body>
+
+    <div class="container" ng-controller="profesorCtrl as profe">
+        <h1>Profesor</h1>
+        <h4>{{ profe.profesor.nombre }}</h4>
+        <hr>
+
+        <div class="row">
+
+            <!-- Div que contiene la imagen del profesor -->
+            <div class="col-sm-3">
+                <section class="panel">
+                    <div class="panel-body" align="center">
+                        <img ng-src="{{profe.profesor.foto}}" class="rounded-circle" alt="" width="150px" height="150px">
+                    </div>
+                </section>
+            </div>
+
+            <!-- Div, donde se mostrará la bio del profesor -->
+            <div class="col-sm-9">
+                <section class="panel">
+                    <div class="panel-body">
+                        {{ profe.profesor.bio }}
+                        <br>
+                        <br>
+                        <strong>Edad:</strong> {{ profe.profesor.edad }}
+                    </div>
+                </section>
+            </div>
+
+
+        </div>
+
+    </div>
+
+</body>
+
 </html>
