--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ejercicio 2</title>
     <!-- incluir Bootstrap  -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!-- incluir animated  -->
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
 
     <!-- incluir angularJS -->
     <script src="js/lib/angular.min.js"></script>
@@ -52,7 +54,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row animated fadeIn fassst" ng-show="mostrarCaja">
 
             <!-- Div que contiene la imagen del profesor -->
             <div class="col-sm-9">
