--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Ejercicio 2</title>
+    <title>Ejercicio 3 "ng-repeat" </title>
     <!-- incluir Bootstrap  -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!-- incluir animated  -->
@@ -20,61 +20,12 @@
 
 <body>
 
-    <div class="container" ng-controller="profesorCtrl as profe">
+    <div class="container" ng-controller="listadoCtrl">
         <h1>Profesor</h1>
-        <h4>{{ profesor.nombre }}</h4>
+        <h4>Manejando Repeticiones</h4>
         <hr>
 
-        <div class="row">
 
-            <!-- Div que contiene la imagen del profesor -->
-            <div class="col-sm-3">
-                <section class="panel">
-                    <div class="panel-body" align="center">
-                        <img ng-src="{{profesor.foto}}" class="rounded-circle" alt="" width="150px" height="150px">
-                    </div>
-                </section>
-            </div>
-
-            <!-- Div, donde se mostrará la bio del profesor -->
-            <div class="col-sm-9">
-                <section class="panel">
-                    <div class="panel-body">
-                        {{ profesor.bio }}
-                        <br>
-                        <br>
-                        <strong>Edad:</strong> {{ profesor.edad }}
-                        <br>
-                        <button class="btn btn-primary" ng-click="EditarProfesor()">Editar</button>
-                    </div>
-                </section>
-            </div>
-
-
-        </div>
-
-
-        <div class="row animated fadeIn fassst" ng-show="mostrarCaja">
-
-            <!-- Div que contiene la imagen del profesor -->
-            <div class="col-sm-9">
-                <section class="panel">
-                    <div class="panel-body">
-
-                        Nombre:
-                        <input type="text" class="form-control" ng-model="editando.nombre">
-                        <br/> Edad:
-                        <input type="text" class="form-control" ng-model="editando.edad">
-                        <br/> Bio:
-                        <textarea class="form-control" ng-model="editando.bio" rows="5"></textarea>
-                        <br/>
-                        <button class="btn btn-primary" ng-click="GuardarCambios()">Guardar</button>
-                        <button class="btn btn-danger" ng-click="CancelarCambios()">Cancelar</button>
-                    </div>
-                </section>
-            </div>
-
-        </div>
 
     </div>
 
