--- a/index.html
+++ b/index.html
@@ -25,7 +25,40 @@
         <h4>Manejando Repeticiones</h4>
         <hr>
 
+        <ul>
+            <li ng-repeat="nombre in listado">
+                {{nombre}}
+            </li>
+        </ul>
 
+        <table class="table table-striped">
+            <tr>
+                <th>Nombre</th>
+                <th>Edad</th>
+                <th>Clase</th>
+            </tr>
+            <tr ng-repeat="profesor in listadoProfesores.profesores">
+                <td>
+                    {{profesor.nombre}}
+                </td>
+                <td>
+                    {{profesor.edad}}
+                </td>
+                <td>
+                    {{profesor.clase}}
+                </td>
+            </tr>
+
+        </table>
+
+
+        <ul>
+            <li ng-repeat="numero in [1,2,3,4,5,6,7,8,10]">
+                2 X {{numero}} = {{2 * numero}}
+            </li>
+        </ul>
+
+        {{ listadoProfesores | json }}
 
     </div>
 
