--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             width: 75px;
             height: 75px;
         }
+        
+        .puntero {
+            cursor: pointer;
+        }
     </style>
 
 </head>
@@ -51,12 +55,12 @@
         <table class="table table-striped">
             <tr>
                 <th>Avatar</th>
-                <th>Nombre</th>
-                <th>Sexo</th>
+                <th><a class="puntero" ng-click="columna='nombre'; reverse = !reverse;">Nombre</a></th>
+                <th><a class="puntero" ng-click="columna='sexo'; reverse = !reverse;">Sexo</a></th>
                 <th>Teléfono</th>
                 <th>Celular</th>
             </tr>
-            <tr ng-repeat="persona in personas | filter:busqueda">
+            <tr ng-repeat="persona in personas | filter:busqueda | orderBy:columna:reverse">
                 <td>
                     <img ng-src="img/{{persona.avatar}}" class="avatar img-circle">
                 </td>
